volexc/tests/ui/parse_missing_equals.out
Error: found "1" but expected "="
   ╭─[parse_missing_equals.vol:3:7]
   │
 3 │     A 1
   │       ┬  
   │       ╰── Unexpected '1'
   │ 
   │ Note: Expected one of: '='
───╯