volexc/tests/ui/parse_missing_equals.vol
// Missing equals in enum variant
enum Foo {
    A 1
}
